# ProjetMCSPierreMathias

./: .gitignore  CMakeLists.txt  makefile
AppExemple/: AppServeur.c  clt.c  srv.c
application/: application.h  client.c  serveurPrincipal.c
data/: data.c  data.h
gestionVideo/: CMakeLists.txt  gestionVideo.cpp  gestionVideo.cxx  gestionVideo.h
host/: child.c  truc.c
protocole/: protocole.c  protocole.h
session/: cltDgram.c  session.c  session.h
